; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_frame_number.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_frame_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_property = type { i32 }

@M_PROPERTY_UNAVAILABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.m_property*, i32, i8*)* @mp_property_frame_number to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp_property_frame_number(i8* %0, %struct.m_property* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.m_property*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store %struct.m_property* %1, %struct.m_property** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to i32*
  store i32* %13, i32** %10, align 8
  %14 = load i32*, i32** %10, align 8
  %15 = call i32 @get_frame_count(i32* %14)
  store i32 %15, i32* %11, align 4
  %16 = load i32, i32* %11, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %4
  %19 = load i32, i32* @M_PROPERTY_UNAVAILABLE, align 4
  store i32 %19, i32* %5, align 4
  br label %29

20:                                               ; preds = %4
  %21 = load i32, i32* %8, align 4
  %22 = load i8*, i8** %9, align 8
  %23 = load i32*, i32** %10, align 8
  %24 = call i32 @get_current_pos_ratio(i32* %23, i32 0)
  %25 = load i32, i32* %11, align 4
  %26 = mul nsw i32 %24, %25
  %27 = call i32 @lrint(i32 %26)
  %28 = call i32 @m_property_int_ro(i32 %21, i8* %22, i32 %27)
  store i32 %28, i32* %5, align 4
  br label %29

29:                                               ; preds = %20, %18
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32 @get_frame_count(i32*) #1

declare dso_local i32 @m_property_int_ro(i32, i8*, i32) #1

declare dso_local i32 @lrint(i32) #1

declare dso_local i32 @get_current_pos_ratio(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
